src/objects/ActivityPriceSchedule__c.object
<CustomObject>
    <fields>
        <fullName>ActivitySchedule__c</fullName>
        <label>ActivitySchedule</label>
        <referenceTo>ActivitySchedule__c</referenceTo>
        <relationshipLabel>ActivityPriceSchedules</relationshipLabel>
        <relationshipName>EventPriceSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PriceType__c</fullName>
        <label>PriceType</label>
        <referenceTo>PriceType__c</referenceTo>
        <relationshipName>EventPriceSchedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ActivityPriceSchedule</label>
    <listViews>
        <fullName>ActivityPriceSchedule_Visible</fullName>
        <columns>NAME</columns>
        <columns>ActivitySchedule__c</columns>
        <columns>PriceType__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>ActivityPriceSchedule Visible</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActivitySchedule__c</columns>
        <columns>Price__c</columns>
        <columns>PriceType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActivityPriceSchedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>